corrects img size, spacing, etc. fixes bug w/ last name. finalizes css & javascript.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.letter {
+#letter {
   display: none;
 }
 
@@ -20,5 +20,5 @@ body {
 }
 
 img {
-  width: 150px;
+  width: 120px;
 }
